[gd_scene load_steps=4 format=3 uid="uid://gehatss5kps2"]

[ext_resource type="Script" path="res://scenes/health_ui.gd" id="1_2tskr"]
[ext_resource type="Texture2D" uid="uid://cvtjs1400vphl" path="res://Assets/Art/heartempty.png" id="2_dna3f"]
[ext_resource type="Texture2D" uid="uid://depqwv3pvn0en" path="res://Assets/Art/heartfull.png" id="3_6ukt0"]

[node name="HealthUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 483.0
offset_top = 369.0
offset_right = 483.0
offset_bottom = 369.0
mouse_filter = 2
script = ExtResource("1_2tskr")

[node name="HealthNumberLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 1.0
offset_bottom = 23.0

[node name="HeartContainerEmpty" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
texture = ExtResource("2_dna3f")
expand_mode = 1
stretch_mode = 1

[node name="HeartContainerFull" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
texture = ExtResource("3_6ukt0")
expand_mode = 1
stretch_mode = 1
